# nos

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: nix-checker.yml
src/: main.rs
